# ant-simulation

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_script.bat
include/entities/: Ant.h  Colony.h  Environment.h
include/simulation/: Simulation.h
include/util/: Math.h
src/: main.cpp
src/entities/: Ant.cpp  Colony.cpp  Environment.cpp
src/simulation/: Simulation.cpp
src/util/: Math.cpp
